study: add 2 more volimes to container

--- a/logs-app/pages/index.ejs
+++ b/logs-app/pages/index.ejs
@@ -35,11 +35,13 @@
           <ul>
             <% for (let i=0; i < logs.length; i++) {%>
               <li>
-                <%= logs[i] %>
+                <%= logs[i] %> .
               </li>
               <% } %>
           </ul>
     </div>
+
+    <p>How does this reload works..?</p>
   </div>
 </body>
 
