study: test reload withoud node_modules volume

--- a/logs-app/pages/index.ejs
+++ b/logs-app/pages/index.ejs
@@ -35,7 +35,7 @@
           <ul>
             <% for (let i=0; i < logs.length; i++) {%>
               <li>
-                <%= logs[i] %> .
+                [<%= logs[i] %>]
               </li>
               <% } %>
           </ul>
